# flutter_full_template

./: pubspec.yaml
lib/: main.dart
lib/src/models/: email.dart
lib/src/rust/: frb_generated.dart
lib/src/rust/api/: simple.dart
linux/flutter/: generated_plugins.cmake
rust/: Cargo.toml  main.rs
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
windows/flutter/: generated_plugins.cmake
